tests/snapshots/tests__pre_reduce_run@sort__bitonic__bitonic_sort_lam.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/bitonic/bitonic_sort_lam.hvm
---
#523776
pre-reduce:
RWTS   :             130
- ANNI :              51
- COMM :               0
- ERAS :               1
- DREF :              78
- OPER :               0
run:
RWTS   :       1_563_105
- ANNI :         944_620
- COMM :          96_766
- ERAS :         221_691
- DREF :         209_409
- OPER :          90_619
